--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	modified by Stefano Tranquillini
 -->
 <html>
+
 	<head>
 		<title>Stefano Tranquillini</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -22,17 +23,16 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/stefano.css" />
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon" /> 
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon" /> 
+
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1>Ciao. <strong>I'm Stefano.</strong> Currently:<br/>
+				<h1>Ciao. <strong>I'm Stefano Tranquillini.</strong><br/>
 				<a href="http://www.lifeparticipation.org" target="_blank">research fellow @ UNITN</a><br />
 				<a href="http://www.chino.io" target="_blank">CTO and CO-Founder @ CHINO</a><br />
 
@@ -40,11 +40,10 @@
 
 		<!-- Main -->
 			<div id="main">
-
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><span class="icon fa-user"></span> Short summary</h2>
+							<h1><span class="icon fa-user"></span>Short summary</h1>
 						</header>
 						<div class="table-wrapper">
 								<table class="normal">
@@ -298,6 +297,7 @@
 							<li>
 								<h3 class="icon fa-home"><span class="label">Where am I?</span></h3>
 								Trento, Italy 
+							</li>
 							<li>
 								<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
 								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a>
@@ -306,6 +306,7 @@
 						<p class="copyright">Design: <a href="http://html5up.net">HTML5 UP</a></p>
 						
 					</section>
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
