--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 										<tr>
 											<td>Int. Conf.</td>
 											<td>Process-Based Design and Integration of Wireless Sensor Network Applications.</td>
-											<td>Int. Conf.</td>
+											<td>BPM</td>
 											<td>2012</td>
 											<td>
 												<a href="papers/TranquilliniBPM2012.pdf" target="_blank"><span class="icon fa-download"></span></a>
