--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 									</tbody>
 								</table>
 							</div>
+							<p>For a more complete list have a look at my  <a href="http://it.linkedin.com/in/stefanotranquillini" target="_blank"><span class="label">Linkedin</span></a></p>
 					</section>
 
 				<!-- Two -->
