--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 										<tr>
 											<td>CrowdCafe</td>
 											<td>CrowdSourcing platform for mobile crowdsourcing.</td>
-											<td><a href="http://www.crowdcafe.org" target="_blank"><span class="icon fa-external-link"></span></a></td>
+											<td><a href="http://www.crowdcafe.io" target="_blank"><span class="icon fa-external-link"></span></a></td>
 										</tr>
 										<tr>
 											<td>Lifeshare</td>
