--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+	<!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
 	html5up.net | @n33co
@@ -59,30 +59,37 @@
 	
 									<tbody>
 										<tr>
+											<td><i class="fa fa-pied-piper-alt"></i></td>
 											<td>Dec 2014</td>
 											<td>CTO and Co-Founder @ <a href="http://www.chino.io" target="_blank">Chino</a></td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-university"></i></td>
 											<td>Mar 2014</td>
 											<td>Research fellow @ <a href="http://www.lifeparticipation.or" target="_blank">UNITN</a>. Working for most of the time on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a></td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-graduation-cap"></i></td>
 											<td>Mar 2014</td>
 											<td>I'm a doctor  <a href="https://www.youtube.com/watch?v=ji5_MqicxSo#t=57m4s" target="_blank"> <span class="icon fa-user-md"></span> but not the kind who helps people</a>. <br />Thesis <em>"Model and systems for managing sensor and crowd-oriented processes"</em>.</td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-plane"></i> <i class="fa fa-university"></i></td>
 											<td>Jun 2012 - Oct 2012</td>
 											<td>Visiting PhD @ SAP Karlsruhe D</td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-university"></i></td>
 											<td>Dec 2010</td>
 											<td>PhD Student @ UNITN</td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-plane"></i> <i class="fa fa-wrench"></i></td>
 											<td>Apr 2010 - Dec 2010</td>
 											<td>Intern Researcher @ HP Labs, Bristol UK</td>
 										</tr>
 										<tr>
+											<td><i class="fa fa-graduation-cap"></i></td>
 											<td>Apr 2010</td>
 											<td>MSc in Computer Science @ UNITN</td>
 										</tr>
