add angular & backbone

--- a/index.html
+++ b/index.html
@@ -283,15 +283,15 @@
 								<tbody>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span></td>
-										<td>Python - Django - Google App Engine (python) - Java</td>
+										<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap</td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-o"></span></td>
-										<td> JavaScript - DBMS - Apache & Tomcat - Android</td>
+										<td> AngularJS - Android </td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-half-o"></span><span class="icon fa-star-o"></span> </td>
-										<td>PHP</td>
+										<td>PHP - BackboneJs - CSS</td>
 									</tr>
 								</tbody>
 							</table>
