--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>Journal</td>
+											<td>Modeling, Enacting, and Integrating Custom Crowdsourcing Processes</td>
+											<td>Transactions on the Web (TWEB)</td>
+											<td>2015</td>
+											<td><a href="http://dl.acm.org/citation.cfm?id=2746353" target="_blank"><span class="icon fa-download"></span></a></td>
+										</tr>
+										<tr>
 											<td>Int. Conf.</td>
 											<td>Improving Family Connectedness through the Sharing of Life Experiences</td>
 											<td>AVI</td>
