--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 		  ga('create', 'UA-19283831-5', 'auto');
 		  ga('send', 'pageview');
+		  ga('set', 'anonymizeIp', true);
 
 		</script>
 	</head>
