--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+		<script type="text/javascript">
+		    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-top"};
+		</script>
+		
+		<script type="text/javascript" src="cookieconsent.js"></script>
+		<!-- End Cookie Consent plugin -->
+
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -33,7 +41,7 @@
 
 		  ga('create', 'UA-19283831-5', 'auto');
 		  ga('send', 'pageview');
-		  ga('set', 'anonymizeIp', true);
+		  //ga('set', 'anonymizeIp', true);
 
 		</script>
 	</head>
