--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-		<script type="text/javascript">
-		    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-top"};
-		</script>
-		
-		<script type="text/javascript" src="cookieconsent.js"></script>
-		<!-- End Cookie Consent plugin -->
-
+	
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -44,6 +37,14 @@
 		  //ga('set', 'anonymizeIp', true);
 
 		</script>
+			<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+		<script type="text/javascript">
+		    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-top"};
+		</script>
+		
+		<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
+		<!-- End Cookie Consent plugin -->
+
 	</head>
 	<body id="top">
 
@@ -127,6 +128,13 @@
 										</tr>
 									</thead>
 									<tbody>
+										<tr>
+											<td>Conference</td>
+											<td>BPMN Task Instance Streaming for Efficient Micro-Task Crowdsourcing Processes</td>
+											<td>BPM</td>
+											<td>2015</td>
+											<td></td>
+										</tr>
 										<tr>
 											<td>Journal</td>
 											<td>Modeling, Enacting, and Integrating Custom Crowdsourcing Processes</td>
