adding download of papers

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 											<td>BPMN Task Instance Streaming for Efficient Micro-Task Crowdsourcing Processes</td>
 											<td>BPM</td>
 											<td>2015</td>
-											<td></td>
+											<td><a href="papers/TranquilliniBPM2015.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
 										<tr>
 											<td>Journal</td>
 											<td>Modeling, Enacting, and Integrating Custom Crowdsourcing Processes</td>
 											<td>Transactions on the Web (TWEB)</td>
 											<td>2015</td>
-											<td><a href="http://dl.acm.org/citation.cfm?id=2746353" target="_blank"><span class="icon fa-download"></span></a></td>
+											<td><a href="papers/TranquilliniTWEB2015.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
 										<tr>
 											<td>Int. Conf.</td>
