--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Conference</td>
+											<td>Int. Conf.</td>
 											<td>BPMN Task Instance Streaming for Efficient Micro-Task Crowdsourcing Processes</td>
 											<td>BPM</td>
 											<td>2015</td>
