--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
 									<tbody>
 										<tr>
 											<td>Int. Conf.</td>
+											<td>Crowdsourcing Micro-Tasks Runtime Controller</td>
+											<td>CSCW</td>
+											<td>2016</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Journal</td>
+											<td>Crowdsourcing processes: a survey of approaches and opportunities</td>
+											<td>IEEE Spotlight</td>
+											<td>2016</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Int. Conf.</td>
 											<td>BPMN Task Instance Streaming for Efficient Micro-Task Crowdsourcing Processes</td>
 											<td>BPM</td>
 											<td>2015</td>
