--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
 							</li>
 							<li>
 								<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a>
+								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a> - 
+								<a href="E3B96842.asc">PGP </a>
 							</li>
 						</ul>
 						<p class="copyright">Design: <a href="http://html5up.net">HTML5 UP</a></p>
