--- a/index.html
+++ b/index.html
@@ -358,6 +358,10 @@
 								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a> - 
 								<a href="E3B96842.asc">PGP </a>
 							</li>
+							<li>
+							<!-- <h3 class="icon fa-file-text"><span class="label">Notes</span></h3>
+							<a href="https://gist.github.com/esseti/0f2f22e8edd08d19a795" target="_blank" >Notes about everything</a>
+							</li> -->
 						</ul>
 						<p class="copyright">Design: <a href="http://html5up.net">HTML5 UP</a></p>
 						
@@ -373,7 +377,7 @@
 					<li><a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
 					<li><a href="#six" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li><a href="https://gist.github.com/esseti/0f2f22e8edd08d19a795" target="_blank" class="icon fa-sticky-note-o"><span class="label">Notes</span></a></li>
+					<li><a href="https://gist.github.com/esseti/0f2f22e8edd08d19a795" target="_blank" class="icon fa-file-text"><span class="label">Notes</span></a></li>
 				</ul>
 				
 			</footer>
