--- a/index.html
+++ b/index.html
@@ -140,7 +140,14 @@
 											<td>Crowdsourcing processes: a survey of approaches and opportunities</td>
 											<td>IEEE Spotlight</td>
 											<td>2016</td>
-											<td></td>
+											<td><a href="papers/KucherbaevIEEEIC2016.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
+										</tr>
+										<tr>
+											<td>Int. Conf.</td>
+											<td>Modeling and Exploration of Crowdsourcing Micro-Tasks Execution</td>
+											<td>HCOMP</td>
+											<td>2015</td>
+											<td><a href="papers/KucherbaevHCOMP2015.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
 										<tr>
 											<td>Int. Conf.</td>
