--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	
 									<tbody>
 										<tr>
+											
 											<td><i class="fa fa-pied-piper-alt"></i></td>
 											<td>Dec 2014</td>
 											<td>CTO and Co-Founder @ <a href="http://www.chino.io" target="_blank">Chino</a></td>
@@ -128,6 +129,13 @@
 										</tr>
 									</thead>
 									<tbody>
+										<tr>
+											<td>Journal</td>
+											<td>The interplay of physical and social wellbeing in older adults: investigating the relationship between physical training and social interactions with virtual social environments</td>
+											<td>PeerJ</td>
+											<td>2016</td>
+											<td></td>
+										</tr>
 										<tr>
 											<td>Int. Conf.</td>
 											<td>Crowdsourcing Micro-Tasks Runtime Controller</td>
