--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1>Ciao. <strong>I'm Stefano Tranquillini.</strong><br/>
 				<a href="#three">CTO and CO-Founder @ CHINO</a><br />
-				<strike><small><a href="#two" >research fellow @ UNITN</a><small></strike><br />
+				<!-- <strike><small><a href="#two" >research fellow @ UNITN</a><small></strike><br /> -->
 
 			</header>
 
@@ -71,7 +71,7 @@
 										<tr>
 											<td><i class="fa fa-pied-piper-alt"></i></td>
 											<td>Nov 2015</td>
-											<td>Goodbye university. Now fully committed to <a href="http://www.chino.io" target="_blank">Chino</a></td>
+											<td>Goodbye University. Now full time @ <a href="http://www.chino.io" target="_blank">Chino</a></td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-pied-piper-alt"></i></td>
