--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1>Ciao. <strong>I'm Stefano Tranquillini.</strong><br/>
-				<a href="#three">CTO and CO-Founder @ CHINO</a><br />
-				<!-- <strike><small><a href="#two" >research fellow @ UNITN</a><small></strike><br /> -->
+				<a href="#three">CTO and CO-Founder @ CHINO.io</a><br />
+				<!-- <strike><small>Previusly: <a href="#two" >research fellow @ UNITN</a><small></strike><br /> -->
 
 			</header>
 
@@ -380,8 +380,7 @@
 					<section id="five">
 						<h1><span class="icon fa-user-secret"></span> Real Life</h1>
 						<p>In my spare time I also have a life</p>
-						<p>I like snowboard, I  <a href="https://www.flickr.com/bako" target="_blank">take photos</a>, and I play futsal <span class="icon fa-futbol-o"></span> in a team.</p>
-
+						<p>I like snowboard, I  <a href="https://www.flickr.com/bako" target="_blank">take photos</a>, I play futsal <span class="icon fa-futbol-o"></span> in a <a href="https://twitter.com/SanRoccoC5" target="_blank">team</a> and golf (uber-beginner hcp 54).</p>
 					</section>
 
 				<!-- Real -->
