--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-o"></span></td>
-										<td> AngularJS - Android </td>
+										<td> AngularJS - Docker</td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-half-o"></span><span class="icon fa-star-o"></span> </td>
-										<td>PHP - BackboneJs - CSS</td>
+										<td>PHP - BackboneJs - CSS - Android</td>
 									</tr>
 								</tbody>
 							</table>
