--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 					<li><a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
 					<li><a href="#six" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li><a href="http://esseti.tumblr.com/" target="_blank" class="icon fa-tumbrl"><span class="label">Tumblr</span></a></li>
+					<li><a href="http://esseti.tumblr.com/" target="_blank" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 					<li><a href="https://gist.github.com/esseti/0f2f22e8edd08d19a795" target="_blank" class="icon fa-file-text"><span class="label">Notes</span></a></li>
 				</ul>
 
