--- a/logbook/index.html
+++ b/logbook/index.html
@@ -3,130 +3,201 @@
 	Photon by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	Logbook by Stefano Tranquillini
 -->
 <html>
-	<head>
-		<title>Photon by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<span class="icon major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+<head>
+	<title>Logbook</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<link rel="shortcut icon" type="image/png" href="images/icon.png"/>
+</head>
+
+<body>
+
+	<!-- Header -->
+	<section id="header">
+		<div class="inner">
+			<i class="icon major fa-book"></i>
+			<h1><strong>Logbook</strong> <br />
+					a work logger made for <br />
+					  Slack <span class="icon fa-slack"></span> and <span class="icon fa-google"></span>oogle Spreadsheet.</br>
+					Simple and effective.</p></h1>
+			<ul class="actions">
+				<li><a href="#one" class="button scrolly">Learn More</a></li>
+				<li><a class="button scrolly" href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id=3091729876.119392988401"><i class="fa fa-slack"></i> Add to slack</a></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row 150%">
+				<div class="6u 12u$(medium)">
+					<header class="major">
+						<h2>Write  in Slack <br />
+								see it in a Spreadsheet</h2>
+					</header>
+					<p>Every team needs a place to where to log and read the work done by each team mate. <br /> <em>Logbook</em> is a Slack command <code>/logbook</code> that sends your text to a Google Spreadsheet.
+						<br />
+						<b>Simple and effective!</b>
+					</p>
+				</div>
+				<div class="6u$ 12u$(medium) important(medium)">
+					<span class="image fit"><img src="images/logbook.gif" alt="" /></span>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="main style2">
+		<div class="container">
+			<div class="row 150%">
+				<!-- <div class="5u 12u$(medium)">
+					<ul class="icons_ul">
+						<li>
+							<i class="fa fa-user-secret fa-3x"></i>
+						</li>
+						<li>
+							<span class="fa-stack fa-3x ">
+							  <i class="fa fa-dollar fa-stack-1x"></i>
+							  <i class="fa fa-ban fa-stack-2x"></i>
+							</span>
+						</li>
+						<li>
+							<i class="fa fa-slack fa-2x"> </i> <i class="fa fa-plus fa-1x"> </i> <i class="fa fa-google fa-2x"> </i> </i>
+						</li
+						<li>
+							<i class="fa fa-users fa-3x"></i>
+						</li>
+						<li>
+							<i class="fa fa-bell-o fa-3x"></i>
+						</li>
+						<li>
+							<i class="fa fa-github fa-3x"></i>
+						</li>
+					</uL>
+
+				</div> -->
+				<!-- <div class="6u 12u$(medium)"> -->
+
+				<!-- <ul class="major-icons">
+						<li><span class="icon  major fa-user-secret"></span></li>
+						<li><span class="icon  major fa-money"></span></li>
+						<li><span class="icon  major fa-slack"></span></li>
+						<li><span class="icon  major fa-google"></span></li>
+						<li><span class="icon  major fa-file-excel-o"></span></li>
+						<li><span class="icon  major fa-github"></span></li>
+					</ul> -->
+				<!-- </div> -->
+				<div class="12u$ 12u$(medium)">
+					<header class="major">
+						<h2>Private and Free.</h2>
+						<h5>plus some other cool things</h5>
+					</header>
+					<ul class="fa-ul icons_ul">
+						<li>
+							<i class="fa fa-user-secret fa-2x"></i> <span class="text">The Spreadsheet is in your hand, only the server has to access it (to write the logs), and then you can deicide to whom to share it.</span>
+						</li>
+						<li>
+							<span class="fa-stack">
+							  <i class="fa fa-dollar fa-stack-1x"></i>
+							  <i class="fa fa-ban fa-stack-2x"></i>
+							</span>
+							<span class="text">
+							It's free, but I would love you <i class="fa fa-heart"></i> forever if you want to make a <a href="#three">donation</a>.
+</span>
+						</li>
+						<!-- <li>
+							<i class="fa fa-slack fa-2x"> </i> <i class="fa fa-plus fa-1x"> </i> <i class="fa fa-google fa-2x"> </i> <span class="text">It's made for slack and google docs.</span>
+						</li> -->
+						<li>
+							<i class="fa fa-users fa-2x"></i> <span class="text">It manages multiple users. Anyone in your slack group can use it. The system create a sheet for each user.</span>
+						</li>
+						<li>
+							<i class="fa fa-bell-o fa-2x"></i> <span class="text">Reminders: it sends a reminder in a channel you select at a time you select.</span>
+						</li>
+						<li>
+							<i class="fa fa-github fa-2x"></i> <span class="text">Part of the Code is availabe on <a href="https://github.com/esseti/slack-logbook/" target="_blank">GitHub</a>.</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="three" class="main style2 style3 special">
+		<div class="container">
+			<header class="major">
+				<h2>Sustain</h2>
+			</header>
+			<p>This project is a side project. I do work at <a href="https://chino.io">chino.io</a> <br/> Since the server capacity is limited, it may break every now and then.
+			</p>
+			<p>
+				Sustain the project, I will use this money to run the system and buy me coffee for coding time!
+			</p>
+			<ul class="actions uniform">
+				<li><i class="icon fa-bitcoin"></i> <code>19r7rPf8kgy2vR5GhJ7XyZ2su8iRBnuH46</code></li>
+				<li><small><a href="mailto:hello@stefanotranquillini.me ">email</a> me for other methods</small></li>
+			</ul>
+		</div>
+	</section>
+	<!-- Three -->
+	<section id="four" class="main style1 special">
+		<div class="container">
+			<header class="major">
+				<h2>Important Info</h2>
+			</header>
+			<p>Some things that you want to know.
+				<b>Before sueing me please get in contact. I don't want problem, I just want to make life of team easier.</b>
+
+			</p>
+			<div class="row 150%">
+				<div class="4u 12u$(medium) section-justify">
+					<h3>Privacy Policy</h3>
+					<p>The system stores only the necessary data that are needed to run the service, namely: </p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li>Slack Team Id: to know who is who</li>
+						<li>Slack Token: to know who is who</li>
+						<li>Slack Webhook: to send reminders</li>
+						<li>Google SpreadSheetId: to post the data</li>
+						<li>Reminder Hour: to send you reminder</li>
 					</ul>
+					<p>
+						It may happen that log data are logged via print or debug. This should be temporary and only for debugging code.
+					</p>
 				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
+				<div class="4u 12u$(medium) section-justify">
+					<h3>Terms of Conditions</h3>
+					<p>The system is provided AS-IS. </br>
+						It's free and runs on a free tier of Google App Engine. The system may be dismissed without notice and there's no plan to offer support (but you can contact me and we can sort this out). <br />
+					</p>
+					<p>
+						No liablity is taken for missing information or loss of information. Do not set this up for vital/important information. It has been born as side project and it still is.
+					</p>
 				</div>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="6u$ 12u$(medium)">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-						</div>
-					</div>
+				<div class="4u$ 12u$(medium) section-justify">
+					<h3>License / Copyright</h3>
+					<p>Slack, and Goole are treadmarks. </p>
+					<h3>Support / Contacts </h3>
+					<p><a href="hello@stefanotranquillini.me?subject=Support logbook">Send an email</a> </p>
 				</div>
-			</section>
+			</div>
+		</div>
+	</section>
 
-		<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
-					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-					<div class="row 150%">
-						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
+	<!-- Four -->
 
-		<!-- Four -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
-					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions uniform">
-						<li><a href="#" class="button special">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
-					</ul>
-				</div>
-			</section>
 
-		<!-- Five -->
-		<!--
+	<!-- Five -->
+	<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -445,27 +516,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+	<!-- Footer -->
+	<section id="footer">
+		<!-- <ul class="icons">
+			<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+		</ul> -->
+		<ul class="copyright">
+			<li>&copy; <a href="http://stefanotranquillini.me" target="_blank">Stefano Tranquillini</a></li>
+			<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+		</ul>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
