--- a/logbook/index.html
+++ b/logbook/index.html
@@ -31,7 +31,7 @@
 					Simple and effective.</p></h1>
 			<ul class="actions">
 				<li><a href="#one" class="button scrolly">Learn More</a></li>
-				<li><a class="button scrolly" href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id=3091729876.119392988401"><i class="fa fa-slack"></i> Add to slack</a></li>
+				<li><a class="button scrolly" href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id=125582478183.125733909078"><i class="fa fa-slack"></i> Add to slack</a></li>
 			</ul>
 		</div>
 	</section>
@@ -186,8 +186,17 @@
 				<div class="4u$ 12u$(medium) section-justify">
 					<h3>License / Copyright</h3>
 					<p>Slack, and Goole are treadmarks. </p>
+					<p>
+						Icon: logbook by Nick Kinling from the Noun Project
+					</p>
+					<p>
+						Any other work not done by me is property of whoever made it. If you want to be listed here, let me know.
+					</p>
 					<h3>Support / Contacts </h3>
 					<p><a href="hello@stefanotranquillini.me?subject=Support logbook">Send an email</a> </p>
+					<p>
+						<a target="_blank" href="https://essetiessevi.slack.com/shared_invite/MTI0MjEzNDA4ODgxLTE0ODM5NTI3ODItZWE1Yzk3NGRiNA">Join slack group </a>
+					</p>
 				</div>
 			</div>
 		</div>
