--- a/logbook/index.html
+++ b/logbook/index.html
@@ -187,7 +187,7 @@
 					<h3>License / Copyright</h3>
 					<p>Slack, and Goole are treadmarks. </p>
 					<p>
-						Icon: logbook by Nick Kinling from the Noun Project
+						Icon: Font Awesome
 					</p>
 					<p>
 						Any other work not done by me is property of whoever made it. If you want to be listed here, let me know.
