--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
 							</li>
 							<li>
 								<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a> - "5D6C E305 DE5A CB4C  BD4A 7533 CEB0 E3B9 6842" -
-								<a href="E3B96842.asc">PGP </a>
+								<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a> 
+								<a href="https://keybase.io/esseti">PGP </a>
 							</li>
 							<li>
 							<!-- <h3 class="icon fa-file-text"><span class="label">Notes</span></h3>
