fixing missing papers

--- a/index.html
+++ b/index.html
@@ -203,17 +203,24 @@
 									<tbody>
 										<tr>
 											<td>Journal</td>
+											<td>CrowdCafe - Mobile Crowdsourcing Platform</td>
+											<td>ACM</td>
+											<td>2016</td>
+											<td><a href="papers/KucherbaevArxiv2016.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
+										</tr>
+										<tr>
+											<td>Journal</td>
 											<td>The interplay of physical and social wellbeing in older adults: investigating the relationship between physical training and social interactions with virtual social environments</td>
 											<td>PeerJ</td>
 											<td>2016</td>
-											<td></td>
+											<td><a href="papers/KhaghaniFarPeerJ2016.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
 										<tr>
 											<td>Int. Conf.</td>
-											<td>Crowdsourcing Micro-Tasks Runtime Controller</td>
+											<td>ReLauncher: Crowdsourcing Micro-Tasks Runtime Controller</td>
 											<td>CSCW</td>
 											<td>2016</td>
-											<td></td>
+											<td><a href="papers/KucherbaevCSCW2016.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
 										<tr>
 											<td>Journal</td>
